--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,11 @@
 
     <packaging>pom</packaging>
     <modules>
+        <module>util</module>
         <module>api</module>
         <module>microservices/review-service</module>
         <module>microservices/recommendation-service</module>
-        <module>util</module>
+        <module>microservices/product-composite-service</module>
     </modules>
     <groupId>com.saber</groupId>
     <artifactId>basic-rest-services</artifactId>
@@ -19,11 +20,5 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>com.saber</groupId>
-            <artifactId>util</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+
 </project>
